--- a/AA2_Pac-Man/src/AA2_PacMan/AA2_PacMan.vcxproj
+++ b/AA2_Pac-Man/src/AA2_PacMan/AA2_PacMan.vcxproj
@@ -160,13 +160,12 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Ball.cpp" />
-    <ClCompile Include="Brick.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="GameController.cpp" />
     <ClCompile Include="Inputs.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="Object.cpp" />
     <ClCompile Include="Play.cpp" />
     <ClCompile Include="PowerUp.cpp" />
     <ClCompile Include="Ranking.cpp" />
@@ -180,6 +179,7 @@
     <ClInclude Include="GameController.h" />
     <ClInclude Include="Inputs.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="Object.h" />
     <ClInclude Include="Play.h" />
     <ClInclude Include="PowerUp.h" />
     <ClInclude Include="Ranking.h" />
