--- a/AA2_Pac-Man/src/AA2_PacMan/AA2_PacMan.vcxproj
+++ b/AA2_Pac-Man/src/AA2_PacMan/AA2_PacMan.vcxproj
@@ -162,6 +162,7 @@
   <ItemGroup>
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="GameController.cpp" />
+    <ClCompile Include="HUD.cpp" />
     <ClCompile Include="Inputs.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menu.cpp" />
@@ -178,6 +179,7 @@
     <ClInclude Include="Button.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="GameController.h" />
+    <ClInclude Include="HUD.h" />
     <ClInclude Include="Inputs.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Object.h" />
