--- a/AA2_Pac-Man/src/AA2_PacMan/AA2_PacMan.vcxproj
+++ b/AA2_Pac-Man/src/AA2_PacMan/AA2_PacMan.vcxproj
@@ -161,8 +161,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="Clyde.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="GameController.cpp" />
     <ClCompile Include="HUD.cpp" />
+    <ClCompile Include="Inky.cpp" />
     <ClCompile Include="Inputs.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menu.cpp" />
@@ -177,9 +180,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Button.h" />
+    <ClInclude Include="Clyde.h" />
     <ClInclude Include="Constants.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="GameController.h" />
     <ClInclude Include="HUD.h" />
+    <ClInclude Include="Inky.h" />
     <ClInclude Include="Inputs.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Object.h" />
