--- a/AA2_Pac-Man/src/AA2_PacMan/AA2_PacMan.vcxproj
+++ b/AA2_Pac-Man/src/AA2_PacMan/AA2_PacMan.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{D74D69A2-3AE5-43FB-91CF-F71AF4C888C8}</ProjectGuid>
     <RootNamespace>AA2PacMan</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <ProjectName>G03_AA2-2</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
