--- a/AA2_Pac-Man/src/AA2_PacMan/AA2_PacMan.vcxproj.filters
+++ b/AA2_Pac-Man/src/AA2_PacMan/AA2_PacMan.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="Fruit.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Blinky.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Renderer.h">
@@ -126,6 +129,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="Fruit.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Blinky.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
